spring boot mybatis and java basic acknowledge note